--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mantine/core": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
+    "@mantine/notifications": "^8.2.4",
     "@prisma/client": "^6.13.0",
     "@tabler/icons-react": "^3.34.1",
     "next": "15.4.6",
