--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@mantine/core": "^8.2.4",
+    "@mantine/dates": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
     "@mantine/notifications": "^8.2.4",
     "@prisma/client": "^6.13.0",
     "@tabler/icons-react": "^3.34.1",
+    "dayjs": "^1.11.13",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
