--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@prisma/client": "^6.13.0",
     "@tabler/icons-react": "^3.34.1",
     "dayjs": "^1.11.13",
-    "next": "15.4.6",
+    "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2"
